--- a/notebook/5_2.ipynb
+++ b/notebook/5_2.ipynb
@@ -14,7 +14,7 @@
     "  \n",
     "#### アイデア\n",
     "・ヒストグラムを見ると短い音声フレームに偏りがあるので正規化とか有効そう  \n",
-    "・カンマ区切りの複数ラベルを考慮する必要あり（one-hot-encordingとか？）  \n",
+    "# ・カンマ区切りの複数ラベルを考慮する必要あり（one-hot-encordingとか？）  \n",
     "・とりあえず今は成形済みのデータ（train_curated）のみを使う  \n",
     "・長い音声（1つ）の処理  "
    ]
@@ -333,6 +333,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.1"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
